[package]
name = "reversal-strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
dotenv = "0.15.0"
chrono = "0.4"
